2/26 html customize, main.js refactoring

--- a/answer-biwako.html
+++ b/answer-biwako.html
@@ -14,9 +14,9 @@
      <div class="map-area">
       <iframe class="ans-contents" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d417063.6455205165!2d135.78870367575118!3d35.24854953812566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60010acfc4ac3edb%3A0xee09cf98c31a940f!2z55C155C25rmW!5e0!3m2!1sja!2sjp!4v1582248517844!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
      </div>
-     <p class="ans-contents">滋賀県人が田舎といじられたときに言うお決まりのセリフは・・</p> 
-     <p class="ans-contents">「琵琶湖の水、止めるぞ！」・・・（不毛）</p> 
-     <a href="quiz-top.html">トップページへ戻る</a>
+     <p class="ans-contents">滋賀県人が京都人、大阪人から「田舎」といじられたときに言うお決まりのセリフは・・</p>
+     <p class="ans-contents">「琵琶湖の水、止めるぞ！」・・・（不毛）</p>
+     <a href="index.html">トップページへ戻る</a>
     </div>
   </div>
   <script src="js/main.js"></script>
