--- a/answer-hikonyan.html
+++ b/answer-hikonyan.html
@@ -13,7 +13,7 @@
       <h1>↓ひこにゃんの姿はコレ↓</h1>
       <img src="img\hikonyan.jpg" class="ans-contents">
       <p class="ans-contents">彦根城のマスコットの猫！！・・かわいい（多分）</p>
-      <a href="quiz-top.html">トップページへ戻る</a>
+      <a href="index.html">トップページへ戻る</a>
     </div>
   </div>
   <script src="js/main.js"></script>
